--- a/Forca de impacto.html
+++ b/Forca de impacto.html
@@ -192,7 +192,7 @@
           </div>
         </div>
         <div class="box-input">
-          <label>Massa (Kg)</label>
+          <label>Massa (Kg):</label>
           <input
             class="input"
             id="point-1-size"
@@ -201,7 +201,7 @@
           />
         </div>
         <div class="box-input">
-          <label>Aceleração (km/h)</label>
+          <label>Aceleração (km/h):</label>
           <input
             id="point-1-acceleration"
             placeholder="Aceleração"
@@ -210,7 +210,7 @@
           />
         </div>
         <div class="box-input">
-          <label>Distância de parada (m)</label>
+          <label>Distância de parada (m):</label>
           <input
             id="point-1-distance"
             placeholder="Distância de parada"
@@ -228,7 +228,7 @@
           </div>
         </div>
         <div class="box-input">
-          <label>Massa (Kg)</label>
+          <label>Massa (Kg):</label>
           <input
             id="point-2-size"
             placeholder="Massa"
@@ -237,7 +237,7 @@
           />
         </div>
         <div class="box-input">
-          <label>Aceleração (km/h)</label>
+          <label>Aceleração (km/h):</label>
           <input
             id="point-2-acceleration"
             placeholder="Aceleração"
@@ -246,7 +246,7 @@
           />
         </div>
         <div class="box-input">
-          <label>Distância de parada (m)</label>
+          <label>Distância de parada (m):</label>
           <input
             id="point-2-distance"
             placeholder="Distância de parada"
