--- a/Sensação termica pela velocidade do vento.html
+++ b/Sensação termica pela velocidade do vento.html
@@ -131,7 +131,7 @@
       });
     </script>
     <section class="section">
-      <h1>Sensação termica pela velocidade do vento</h1>
+      <h1>Sensação térmica pela velocidade do vento</h1>
       <div class="box-inputs">
         <div class="box-title">
           <div class="box-result">
